classDiagram
    %% ============================================
    %% CSR Volunteer Matching System - Class Diagram
    %% Updated: November 2025 (After Code Cleanup)
    %% ============================================

    %% ============================================
    %% CORE AUTHENTICATION & AUTHORIZATION
    %% ============================================

    class UserAccount {
        -UUID id
        -String email
        -String password
        -String name
        -String phoneNumber
        -String address
        -DateTime dateOfBirth
        -String status
        -UUID userProfileId
        -Integer age
        -String location
        -String accessibilityNeeds
        -String profilePhoto
        -String companyName
        -String companyRegistrationNumber
        -String industry
        -String contactPerson
        -String companyAddress
        -String companyLogo
        -String department
        -String profileStatus
        -DateTime createdAt
        -DateTime updatedAt
        +getRole() String
        +toJSON() Object
        +findAll(page, limit)$ UserAccount[]
        +findById(id)$ UserAccount
        +findByEmail(email)$ UserAccount
        +login(email, password)$ LoginResult
        +findByUserIdWithProfileName(userId, profileName)$ UserAccount
        +findByProfileName(profileName, page, limit)$ UserAccount[]
        +findByStatus(status, page, limit)$ UserAccount[]
        +create(data)$ UserAccount
        +update(id, data)$ UserAccount
        +delete(id)$ Boolean
        +count()$ Number
        +countByProfileName(profileName)$ Number
        +countByStatus(status)$ Number
        +search(query, page, limit)$ UserAccount[]
        +suspend(id)$ UserAccount
        +activate(id)$ UserAccount
        +updatePINProfile(userId, data)$ UserAccount
        +updateCSRRepProfile(userId, data)$ UserAccount
        +updatePlatformManagerProfile(userId, data)$ UserAccount
        +suspendProfile(id)$ UserAccount
        +activateProfile(id)$ UserAccount
    }

    class UserProfile {
        -UUID id
        -String name
        -String description
        -JSON permissions
        -Boolean isActive
        -DateTime createdAt
        -DateTime updatedAt
        +findAll()$ UserProfile[]
        +findById(id)$ UserProfile
        +findByName(name)$ UserProfile
        +create(data)$ UserProfile
        +update(id, data)$ UserProfile
        +count()$ Number
        +search(query, isActive)$ UserProfile[]
    }

    %% ============================================
    %% SERVICE MANAGEMENT
    %% ============================================

    class RequestCategory {
        -UUID id
        -String name
        -String description
        -String iconUrl
        -Boolean isActive
        -DateTime createdAt
        -DateTime updatedAt
        +findAll()$ RequestCategory[]
        +findActive()$ RequestCategory[]
        +findById(id)$ RequestCategory
        +create(data)$ RequestCategory
        +update(id, data)$ RequestCategory
        +delete(id)$ Boolean
        +search(query, includeInactive)$ RequestCategory[]
        +count()$ Number
    }

    class Request {
        -UUID id
        -UUID pinId
        -UUID categoryId
        -String title
        -String description
        -String urgency
        -DateTime dateNeeded
        -String location
        -String status
        -Integer viewCount
        -Integer shortlistCount
        -DateTime createdAt
        -DateTime updatedAt
        +toJSON() Object
        +findById(id)$ Request
        +searchByPIN(pinId, query, status, categoryId, urgency)$ Request[]
        +findByStatus(status, page, limit)$ Request[]
        +findCompletedByPIN(pinId, query)$ Request[]
        +create(data)$ Request
        +update(id, data)$ Request
        +delete(id)$ Boolean
        +count()$ Number
        +countByStatus(status)$ Number
        +search(query, status, urgency, categoryId, page, limit)$ Request[]
        +incrementViewCountDB(id)$ void
        +incrementShortlistCountDB(id)$ void
        +getViewCount(pinId, requestId)$ Number
        +getShortlistCount(pinId, requestId)$ Number
    }

    %% ============================================
    %% MATCHING SYSTEM
    %% ============================================

    class Shortlist {
        -UUID id
        -UUID csrRepId
        -UUID requestId
        -DateTime createdAt
        +findById(id)$ Shortlist
        +getShortlistedRequestIds(csrRepId)$ String[]
        +create(data)$ Shortlist
        +deleteByCSRRepAndRequest(csrRepId, requestId)$ Boolean
        +exists(csrRepId, requestId)$ Boolean
        +search(csrRepId, query)$ Shortlist[]
    }

    class VolunteerOffer {
        -UUID id
        -UUID csrRepId
        -UUID requestId
        -String message
        -String status
        -DateTime createdAt
        -DateTime updatedAt
        +findById(id)$ VolunteerOffer
        +exists(csrRepId, requestId)$ Boolean
        +search(userId, role, status, page, limit)$ VolunteerOffer[]
        +create(data)$ VolunteerOffer
        +update(id, data)$ VolunteerOffer
    }

    class Match {
        -UUID id
        -UUID requestId
        -UUID csrRepId
        -UUID pinId
        -String status
        -DateTime matchedAt
        -DateTime completedAt
        -String cancellationReason
        -DateTime updatedAt
        +findById(id)$ Match
        +searchByPIN(pinId, query, status)$ Match[]
        +search(userId, role, status, query, page, limit)$ Match[]
        +create(data)$ Match
        +update(id, data)$ Match
        +count()$ Number
    }

    %% ============================================
    %% NOTIFICATIONS
    %% ============================================

    class Notification {
        -UUID id
        -UUID userId
        -String type
        -String message
        -Boolean isRead
        -DateTime createdAt
        +findById(id)$ Notification
        +findByUserId(userId, page, limit)$ Notification[]
        +findUnreadByUserId(userId)$ Notification[]
        +create(data)$ Notification
        +markAsRead(id)$ Notification
        +markAllAsRead(userId)$ void
        +countUnread(userId)$ Number
    }

    %% ============================================
    %% RELATIONSHIPS
    %% ============================================

    %% Core Authentication
    UserProfile "1" --> "0..*" UserAccount : has

    %% UserAccount Relationships (role-based)
    UserAccount "1" --> "0..*" Request : creates (when PIN role)
    UserAccount "1" --> "0..*" Shortlist : saves (when CSR role)
    UserAccount "1" --> "0..*" VolunteerOffer : makes (when CSR role)
    UserAccount "1" *-- "0..*" Match : provides help (CSR)
    UserAccount "1" *-- "0..*" Match : receives help (PIN)

    %% Request Relationships
    RequestCategory "1" --> "0..*" Request : categorizes
    Request "1" --> "0..*" Shortlist : saved by
    Request "1" --> "0..*" VolunteerOffer : receives
    Request "1" --> "0..1" Match : matched with

    %% Notifications
    UserAccount "1" --> "0..*" Notification : receives
